[tool.poetry]
name = "escape_roomba"
version = "0.1.0"
description = ""
authors = ["Dan Egnor <egnor@ofb.net>", "Ana Ulin <ana@ulin.org>"]

[tool.poetry.scripts]
thread_bot = 'escape_roomba.thread_manager:thread_bot_main'
event_logger = 'escape_roomba.event_logger:event_logger_main'

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.4.1"
regex = "^2020.9.27"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
pytest = "^6.0.2"
pytest-asyncio = "^0.14.0"
pytest-mock = "^3.3.1"
mock = "^4.0.2"

[tool.pytest.ini_options]
mock_use_standalone_module = true
filterwarnings = '''
    error
    ignore:"@coroutine":DeprecationWarning:aiohttp  
'''

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
